[gd_scene load_steps=7 format=3 uid="uid://dqtxxwxrnn0sc"]

[ext_resource type="Texture2D" uid="uid://moovslliujq2" path="res://UI/Ability Cooldowns/button.png" id="1_ls7e8"]
[ext_resource type="Script" path="res://UI/Ability Cooldowns/ability_button.gd" id="2_cv1ph"]
[ext_resource type="Texture2D" uid="uid://80wnsugbxsb1" path="res://Entities/Weapons/Staffs/Bone Staff/attacks/Secondary/bone.png" id="3_h3wjg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckl5x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyj7p"]
bg_color = Color(0, 0, 0, 0.666667)

[sub_resource type="Theme" id="Theme_nfpf4"]
ProgressBar/styles/background = SubResource("StyleBoxEmpty_ckl5x")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_jyj7p")

[node name="TextureButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -18.0
offset_right = 12.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_ls7e8")
script = ExtResource("2_cv1ph")

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 26.0
offset_bottom = 26.0
texture = ExtResource("3_h3wjg")
expand_mode = 1
stretch_mode = 3

[node name="Cooldown" type="ProgressBar" parent="TextureRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.5
offset_top = -11.5
offset_right = 11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nfpf4")
show_percentage = false

[node name="TotalCooldown" type="Timer" parent="."]

[node name="ProgressBarUpdate" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="TotalCooldown" to="." method="_on_total_cooldown_timeout"]
[connection signal="timeout" from="ProgressBarUpdate" to="." method="_on_progress_bar_update_timeout"]
